05-flex-modal complete, used margin, padding, flex-shrink, and justify/align to fix layout of the dialogue box

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
 }
 
 .icon {
@@ -33,6 +36,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  
 }
 
 .close-button {
@@ -50,6 +55,7 @@ body {
   padding: 0;
 }
 
+
 button {
   cursor: pointer;
   padding: 8px 16px;
@@ -60,6 +66,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  text-align: left;
 }
 
 button.cancel {
@@ -67,3 +74,22 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.header-title{
+  font-weight: bold;
+  font-size: larger;
+}
+
+.text {
+  margin-bottom: 16px;
+}
+
